--- a/index.html
+++ b/index.html
@@ -16,8 +16,24 @@
   <script type="text/javascript" src="javascripts/vendor/cssrefresh.js"></script>
 </head>
 <body>
+<div class="top-page">
+	<h1 id="coming-soon-logo" class="" src="images/logo-vertical.svg">
+</div>
+<div id="about" class="row">
+	<h2 class="small-12 large-12 columns">About Caritakathon</h2>
+</div>
 <div class="row">
-	<h1 id="coming-soon-logo"  class="columns large-4 large-centered small-centered small-6" src="images/logo-vertical.svg">
+	<div class="columns large-6">
+		<h3>What is Caritakathon</h3>
+		<p>It is a 2-day hackathon-style event on October 5-6, 2013 where ten to fifteen teams of 3 (project manager, designer, developer) will build websites on the spot for non-profit organizations or charities (the "clients"). Clients will be assigned to teams randomly on the day of the event itself.</p>
+
+	</div>
+	<div class="columns large-6">
+		<h3>When will it happen?</h3>
+		<p>On October 5-6, 2013</p>
+		<h3>Where will it happen?</h3>
+		<p>This is still TBA but will definitely be within Metro Manila</p>
+	</div>
 </div>
   <script>
   document.write('<script src=' +
