Finished basic information
Finishedi Basic information

--- a/index.html
+++ b/index.html
@@ -19,21 +19,42 @@
 <div class="top-page">
 	<h1 id="coming-soon-logo" class="" src="images/logo-vertical.svg">
 </div>
-<div id="about" class="row">
-	<h2 class="small-12 large-12 columns">About Caritakathon</h2>
-</div>
-<div class="row">
-	<div class="columns large-6">
-		<h3>What is Caritakathon</h3>
-		<p>It is a 2-day hackathon-style event on October 5-6, 2013 where ten to fifteen teams of 3 (project manager, designer, developer) will build websites on the spot for non-profit organizations or charities (the "clients"). Clients will be assigned to teams randomly on the day of the event itself.</p>
 
-	</div>
-	<div class="columns large-6">
-		<h3>When will it happen?</h3>
-		<p>On October 5-6, 2013</p>
-		<h3>Where will it happen?</h3>
-		<p>This is still TBA but will definitely be within Metro Manila</p>
-	</div>
+	<div id="container">
+		<div id="about" class="row">
+			<h2 class="section-header small-12 large-12 columns">About Caritakathon</h2>
+		</div>
+		<div class="row">
+			<div class="columns large-6">
+				<h3>What is Caritakathon</h3>
+				<p><em>Caritakathon</em>, a portmanteau of caritas and hackathon, is a 2-day hackathon where teams of 3 design and build websites for charities and non-profit organizations. Prizes will be given to the team and charity whose website has the best execution of the client brief and fulfillment of the judges' criteria.</p>
+				<h3>Participants</h3>
+				<p>Each <em>team</em> will be comprised of a <strong>Designer</strong>, <strong>Developer</strong> and <strong>Project Manager</strong>. Each team will be randomly assigned a charity to be announced at the start of the hackathon.</p>
+		
+		
+				<h3>Registration</h3>
+				<p>Registration for the event will be done by group. Teams must submit a one-page website containing background information about each member so the organizers can determine eligibility for participation, as well as a sign of commitment from them.</p>
+			</div>
+			
+			<div class="columns large-6">
+				<h3>TimeLine</h3>
+				<ul>
+					<li><strong>AUGUST 21</strong> Opening of signups</li>
+					<li><strong>SEPTEMBER 18</strong> Pre-event Bootcamp</li>
+					<li><strong>OCTOBER 5-6</strong> Caritakathon</li>
+				</ul>
+				<h3>Where will it happen?</h3>
+				<p>This is still TBA but will definitely be within Metro Manila</p>
+			</div>
+		</div>
+		<div class="row">
+			<h2 class="section-header small-12 large-12 columns">Registration</h2>
+		</div>
+		<div class="row">
+			<div class="small-12 large-12 columns">
+				<div style="width:100%; text-align:left;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=7409717665&ref=etckt&v=2" frameborder="0" height="214" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Event Registration Online</a><span style="color:#ddd;"> for </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://caritakathon2013.eventbrite.com?ref=etckt">Caritakathon – a Website Building Hackathon for Charities & Nonprofits</a> <span style="color:#ddd;">powered by</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
+			</div>
+		</div>
 </div>
   <script>
   document.write('<script src=' +
