Added more content
added more content

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<div class="columns large-6">
 				<h3>TimeLine</h3>
 				<ul>
-					<li><strong>AUGUST 21</strong> Opening of signups</li>
+					<li><strong>AUGUST 21</strong> Formal Launch</li>
 					<li><strong>SEPTEMBER 18</strong> Pre-event Bootcamp</li>
 					<li><strong>OCTOBER 5-6</strong> Caritakathon</li>
 				</ul>
