--- a/index.html
+++ b/index.html
@@ -17,45 +17,146 @@
 </head>
 <body>
 <div class="top-page">
-	<h1 id="coming-soon-logo" class="" src="images/logo-vertical.svg">
+	<h1 id="coming-soon-logo" class="" src="images/logo-vertical.svg">Caritakathon</h3>
+	<div id="tagline"><span>CallOutThe</span>&#40;Kindness&#41;&#59;</div>
 </div>
 
 	<div id="container">
 		<div id="about" class="row">
 			<h2 class="section-header small-12 large-12 columns">About Caritakathon</h2>
 		</div>
-		<div class="row">
-			<div class="columns large-6">
+		<div id="about-caritakathon"  class="row">
+			<div class="columns large-4 small-12">
 				<h3>What is Caritakathon</h3>
 				<p><em>Caritakathon</em>, a portmanteau of caritas and hackathon, is a 2-day hackathon where teams of 3 design and build websites for charities and non-profit organizations. Prizes will be given to the team and charity whose website has the best execution of the client brief and fulfillment of the judges' criteria.</p>
-				<h3>Participants</h3>
-				<p>Each <em>team</em> will be comprised of a <strong>Designer</strong>, <strong>Developer</strong> and <strong>Project Manager</strong>. Each team will be randomly assigned a charity to be announced at the start of the hackathon.</p>
-		
-		
-				<h3>Registration</h3>
-				<p>Registration for the event will be done by group. Teams must submit a one-page website containing background information about each member so the organizers can determine eligibility for participation, as well as a sign of commitment from them.</p>
 			</div>
-			
-			<div class="columns large-6">
+			<div class="columns large-4 small-12">
 				<h3>TimeLine</h3>
 				<ul>
 					<li><strong>AUGUST 21</strong> Formal Launch</li>
 					<li><strong>SEPTEMBER 18</strong> Pre-event Bootcamp</li>
 					<li><strong>OCTOBER 5-6</strong> Caritakathon</li>
 				</ul>
+			</div>
+			<div class="columns large-4 small-12">
 				<h3>Where will it happen?</h3>
 				<p>This is still TBA but will definitely be within Metro Manila</p>
 			</div>
 		</div>
 		<div class="row">
-			<h2 class="section-header small-12 large-12 columns">Registration</h2>
+			
+		</div>
+		<div id="how-do-i-join">
+			<div class="row" id="participants">
+				<h2 class="section-header small-12 large-12">
+					How do I Join?
+				</h2>
+			</div>
+			<div class="row">
+				<div id="teams" class="columns large-6">
+					<h3>Teams</h3>
+					<p>Each <em>team</em> will be comprised of a <strong>Designer</strong>, <strong>Developer</strong> and <strong>Project Manager</strong>. Each team will be randomly assigned a charity to be announced at the start of the hackathon.</p>
+					<div class="row">
+						<div id="designer" class="columns large-4 small-4">
+							<img src="images/logo-red.svg" width="80" class="role-logo">
+							Designer
+						</div>
+						<div id="developer" class="columns large-4 small-4">
+							<img src="images/logo-blue.svg" width="80" class="role-logo">
+							Developer
+						</div>
+						<div id="project-manager" class="columns large-4 small-4">
+							<img src="images/logo-yellow.svg" width="80" class="role-logo">
+							Project Manager
+						</div>
+					</div>
+				</div>
+				<div class="columns large-6">
+					<h3>Registration</h3>
+					<p>Registration for the event will be done by group. Teams must submit a one-page website containing background information about each member so the organizers can determine eligibility for participation, as well as a sign of commitment from them.</p>
+				</div>
+			</div>
+		
+		<div id="registration" class="row">
+			<h2 class="section-header small-12 large-12 columns">Registration Form</h2>
 		</div>
 		<div class="row">
 			<div class="small-12 large-12 columns">
-				<div style="width:100%; text-align:left;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=7409717665&ref=etckt&v=2" frameborder="0" height="214" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Event Registration Online</a><span style="color:#ddd;"> for </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://caritakathon2013.eventbrite.com?ref=etckt">Caritakathon – a Website Building Hackathon for Charities & Nonprofits</a> <span style="color:#ddd;">powered by</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
+				<div style="width:100%; text-align:left;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=7409717665&ref=etckt&v=2" frameborder="0" height="280" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Event Registration Online</a><span style="color:#ddd;"> for </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://caritakathon2013.eventbrite.com?ref=etckt">Caritakathon – a Website Building Hackathon for Charities & Nonprofits</a> <span style="color:#ddd;">powered by</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
 			</div>
 		</div>
+	</div>
+	<div class="row">
+		<h2 class="section-header small-12 large-12 columns">
+			Mechanics
+		</h2>
+	</div>
+	<div class="row">
+		<div class="columns small-12 large-6">
+			<h3>Consultation</h3>
+			<p>Each team will have 2 hours to meet with their respective clients regarding the website needs, standards, design, etc.</p>
+
+			<p>After the meeting with their respective clients, teams will have 2 hours to discuss their strategy then the hackathon begins.</p>
+
+		</div>
+		<div class="columns small-12 large-6">
+				<h3>Presentation</h3>
+				<p>Each team will have a maximum of 30 minutes to present to a panel of judges on the 2nd day of the hackathon, at 4:00 pm.</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="columns small-12 large-6">
+			<h3>Mechanics</h3>
+			<ol>
+				<li>Each team should be able to present a brochure type site with 5 minimum pages</li>
+				<li>Websites should be responsive and mobile friendly.</li>
+				<li>Use of existing CMS themes/templates are discouraged.</li>
+				<li>Responsiveness, mobile first concepts & usability + accessibility are central goals.</li>
+			</ol>
+		</div>
+		<div class="columns small-12 large-6">
+			<h3>Criteria</h3>
+			<ul>
+				<li><strong>Aesthetics (45%)</strong>
+					<ul>
+						<li>Visual Appeal and style (color, contrast, fonts, white space)</li>
+						<li>Consistent look and feel</li>
+						<li>Readability</li>
+					</ul>
+				</li>
+				<li><strong>Design (45%)</strong>
+					<ul>
+						<li>Browser Compatibility</li>
+						<li>Mobile Friendly</li>
+					</ul>
+				</li>
+				<li><strong>Client Handling (5%)</strong>
+					<ul>
+						<li>How you satisfied the client</li>
+					</ul>
+				</li>
+				<li><strong>Presentation (5%)</strong>
+					<ul>
+						<li>Effectiveness of presentation</li>
+					</ul>
+				</li>
+			</ul>
+		</div>
+	</div>
 </div>
+<script type="text/javascript">
+  WebFontConfig = {
+    google: { families: [ 'Roboto:400,900italic,700italic,500italic,400italic,300italic,100italic,900,700,500,300,100:latin' ] }
+  };
+  (function() {
+    var wf = document.createElement('script');
+    wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+      '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+    wf.type = 'text/javascript';
+    wf.async = 'true';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(wf, s);
+  })(); </script>
   <script>
   document.write('<script src=' +
   ('__proto__' in {} ? 'javascripts/vendor/zepto' : 'javascripts/vendor/jquery') +
