added regbutton responsive behavior

--- a/index.html
+++ b/index.html
@@ -81,8 +81,13 @@
 			<h2 class="section-header small-12 large-12 columns">Registration Form</h2>
 		</div>
 		<div class="row">
-			<div class="small-12 large-12 columns">
+			<div id="reg-form" class="small-12 large-12 columns">
+				<div class="hide-for-large" style="text-align: center;">
+					<a href="http://www.eventbrite.com/event/7409717665?ref=ebtn" target="_blank"><img src="http://www.eventbrite.com/custombutton?eid=7409717665" alt="Eventbrite - Caritakathon – a Website Building Hackathon for Charities &amp; Nonprofits" /></a>
+				</div>
+				<div class="hide-for-small">
 				<div style="width:100%; text-align:left;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=7409717665&ref=etckt&v=2" frameborder="0" height="280" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Event Registration Online</a><span style="color:#ddd;"> for </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://caritakathon2013.eventbrite.com?ref=etckt">Caritakathon – a Website Building Hackathon for Charities & Nonprofits</a> <span style="color:#ddd;">powered by</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
+			</div>
 			</div>
 		</div>
 	</div>
