--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script type="text/javascript" src="javascripts/vendor/cssrefresh.js"></script>
 </head>
 <body>
-<div class="top-page">
+<div class="top-page windowheight">
 	<h1 id="coming-soon-logo" class="" src="images/logo-vertical.svg">Caritakathon</h3>
 	<div id="tagline"><span>CallOutThe</span>&#40;Kindness&#41;&#59;</div>
 </div>
@@ -78,75 +78,94 @@
 			</div>
 		
 		<div id="registration" class="row">
-			<h2 class="section-header small-12 large-12 columns">Registration Form</h2>
+			<h3 class="small-12 large-12 columns">Registration Form</h3>
 		</div>
 		<div class="row">
 			<div id="reg-form" class="small-12 large-12 columns">
-				<div class="hide-for-large" style="text-align: center;">
+				<div class="show-for-small" style="text-align: center;">
 					<a href="http://www.eventbrite.com/event/7409717665?ref=ebtn" target="_blank"><img src="http://www.eventbrite.com/custombutton?eid=7409717665" alt="Eventbrite - Caritakathon – a Website Building Hackathon for Charities &amp; Nonprofits" /></a>
 				</div>
 				<div class="hide-for-small">
-				<div style="width:100%; text-align:left;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=7409717665&ref=etckt&v=2" frameborder="0" height="280" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Event Registration Online</a><span style="color:#ddd;"> for </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://caritakathon2013.eventbrite.com?ref=etckt">Caritakathon – a Website Building Hackathon for Charities & Nonprofits</a> <span style="color:#ddd;">powered by</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
+					<div style="width:100%; text-align:left;" >
+						<iframe  src="http://www.eventbrite.com/tickets-external?eid=7409717665&ref=etckt&v=2" frameborder="0" height="280" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true">
+						</iframe>
+						<div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" >
+							<a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Event Registration Online</a>
+							<span style="color:#ddd;"> for </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://caritakathon2013.eventbrite.com?ref=etckt">Caritakathon – a Website Building Hackathon for Charities & Nonprofits</a>
+							<span style="color:#ddd;">powered by</span> 
+							<a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a>
+						</div>
+					</div>
+				</div>
 			</div>
+		</div>
+	</div>
+	<div id="mechanics">
+		<div class="row">
+			<h2 class="section-header small-12 large-12 columns">
+				Mechanics
+			</h2>
+		</div>
+		<div class="row">
+			<div class="columns small-12 large-6">
+				<h3>Consultation</h3>
+				<p>Each team will have 2 hours to meet with their respective clients regarding the website needs, standards, design, etc.</p>
+
+				<p>After the meeting with their respective clients, teams will have 2 hours to discuss their strategy then the hackathon begins.</p>
+
+			</div>
+			<div class="columns small-12 large-6">
+					<h3>Presentation</h3>
+					<p>Each team will have a maximum of 30 minutes to present to a panel of judges on the 2nd day of the hackathon, at 4:00 pm.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="columns small-12 large-6">
+				<h3>Mechanics</h3>
+				<ol>
+					<li>Each team should be able to present a brochure type site with 5 minimum pages</li>
+					<li>Websites should be responsive and mobile friendly.</li>
+					<li>Use of existing CMS themes/templates are discouraged.</li>
+					<li>Responsiveness, mobile first concepts & usability + accessibility are central goals.</li>
+				</ol>
+			</div>
+			<div class="columns small-12 large-6">
+				<h3>Criteria</h3>
+				<ul>
+					<li><strong>Aesthetics (45%)</strong>
+						<ul>
+							<li>Visual Appeal and style (color, contrast, fonts, white space)</li>
+							<li>Consistent look and feel</li>
+							<li>Readability</li>
+						</ul>
+					</li>
+					<li><strong>Design (45%)</strong>
+						<ul>
+							<li>Browser Compatibility</li>
+							<li>Mobile Friendly</li>
+						</ul>
+					</li>
+					<li><strong>Client Handling (5%)</strong>
+						<ul>
+							<li>How you satisfied the client</li>
+						</ul>
+					</li>
+					<li><strong>Presentation (5%)</strong>
+						<ul>
+							<li>Effectiveness of presentation</li>
+						</ul>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</div>
-	<div class="row">
-		<h2 class="section-header small-12 large-12 columns">
-			Mechanics
-		</h2>
-	</div>
-	<div class="row">
-		<div class="columns small-12 large-6">
-			<h3>Consultation</h3>
-			<p>Each team will have 2 hours to meet with their respective clients regarding the website needs, standards, design, etc.</p>
+	<div id="sponsors-and-partners">
+		<div class="row">
+			<h2 class="section-header columns large-12 small-12">
+				Sponsors and Partners
+			</h2>
+		</div>
 
-			<p>After the meeting with their respective clients, teams will have 2 hours to discuss their strategy then the hackathon begins.</p>
-
-		</div>
-		<div class="columns small-12 large-6">
-				<h3>Presentation</h3>
-				<p>Each team will have a maximum of 30 minutes to present to a panel of judges on the 2nd day of the hackathon, at 4:00 pm.</p>
-		</div>
-	</div>
-	<div class="row">
-		<div class="columns small-12 large-6">
-			<h3>Mechanics</h3>
-			<ol>
-				<li>Each team should be able to present a brochure type site with 5 minimum pages</li>
-				<li>Websites should be responsive and mobile friendly.</li>
-				<li>Use of existing CMS themes/templates are discouraged.</li>
-				<li>Responsiveness, mobile first concepts & usability + accessibility are central goals.</li>
-			</ol>
-		</div>
-		<div class="columns small-12 large-6">
-			<h3>Criteria</h3>
-			<ul>
-				<li><strong>Aesthetics (45%)</strong>
-					<ul>
-						<li>Visual Appeal and style (color, contrast, fonts, white space)</li>
-						<li>Consistent look and feel</li>
-						<li>Readability</li>
-					</ul>
-				</li>
-				<li><strong>Design (45%)</strong>
-					<ul>
-						<li>Browser Compatibility</li>
-						<li>Mobile Friendly</li>
-					</ul>
-				</li>
-				<li><strong>Client Handling (5%)</strong>
-					<ul>
-						<li>How you satisfied the client</li>
-					</ul>
-				</li>
-				<li><strong>Presentation (5%)</strong>
-					<ul>
-						<li>Effectiveness of presentation</li>
-					</ul>
-				</li>
-			</ul>
-		</div>
 	</div>
 </div>
 <script type="text/javascript">
@@ -165,9 +184,15 @@
   <script>
   document.write('<script src=' +
   ('__proto__' in {} ? 'javascripts/vendor/zepto' : 'javascripts/vendor/jquery') +
-  '.js><\/script>')
+  '.js><\/script>');
+
   </script>
-  
+  <script type="text/javascript">
+  $(document).ready(function(){
+	var bodyheight = $(window).height();
+	$(".windowheight").height(bodyheight);
+  });
+  </script>
   <script src="javascripts/foundation/foundation.js"></script>
 	
 	<script src="javascripts/foundation/foundation.abide.js"></script>
