--- a/index.html
+++ b/index.html
@@ -165,7 +165,11 @@
 				Sponsors and Partners
 			</h2>
 		</div>
-
+		<div class="row">
+			<div class="small-12 large-12 columns">
+				<img src="images/sponsors/smartdevnet.png" width="120" alt="" />
+			</div>
+		</div>
 	</div>
 </div>
 <script type="text/javascript">
