added Ia's comments

--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
   <script type="text/javascript" src="javascripts/vendor/cssrefresh.js"></script>
 </head>
 <body>
+<div class="fixed">
+	<nav class="top-bar">
+		<ul class="title-area">
+			<li class="name"></li>
+		</ul>
+		<section class="top-bar-section">
+			<ul class="left">
+				<li><a href="#about" class="scroll">About Caritakathon</a></li>
+				<li><a href="#how-do-i-join" class="scroll">How Do I Join</a></li>
+				<li><a href="#mechanics" class="scroll">Mechanics</a></li>
+				<li><a href="#sponsors-and-partners" class="scroll">Sponsors</a>
+			</ul>
+		</section>
+	</nav>
+</div>
 <div class="top-page windowheight">
 	<h1 id="coming-soon-logo" class="" src="images/logo-vertical.svg">Caritakathon</h3>
 	<div id="tagline">A site-building hackathon for non-profits & charities</div>
