--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
   
   <link rel="stylesheet" href="stylesheets/app.css">
-  
+  <meta property="og:title" content="Caritakathon" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="http://www.pwdo.org/hackathon" />
+<meta property="og:image" content="http://pwdo.org/hackathon/media-image.jpg" />
 
   <script src="javascripts/vendor/custom.modernizr.js"></script>
   <script type="text/javascript" src="javascripts/vendor/cssrefresh.js"></script>
